fix(docs): move import lower to fix css layers order

--- a/apps/web/src/components/BlocksLayout.astro
+++ b/apps/web/src/components/BlocksLayout.astro
@@ -1,9 +1,10 @@
 ---
-import StarlightPage from "@astrojs/starlight/components/StarlightPage.astro";
 import BlocksNav from "@/components/BlocksNav.astro";
 
 // import "@/styles/global.css";
-import "@bejamas/ui/styles/globals.css";
+// import "@bejamas/ui/styles/globals.css";
+
+import StarlightPage from "@astrojs/starlight/components/StarlightPage.astro";
 ---
 
 <script src="//unpkg.com/alpinejs" defer></script>
