--- a/apps/web/src/pages/blocks/navigation-headers/navbar-2.astro
+++ b/apps/web/src/pages/blocks/navigation-headers/navbar-2.astro
@@ -11,8 +11,6 @@ import MenuDropdown from "@bejamas/ui/components/Dropdown.astro";
 import StickySurface from "@bejamas/ui/components/StickySurface.astro";
 import Breadcrumbs from "@bejamas/ui/components/Breadcrumbs.astro";
 import { SlashIcon } from "@lucide/astro";
-
-import "../../../styles/global.css";
 ---
 
 <BlockExampleLayout>
@@ -43,28 +41,32 @@ import "../../../styles/global.css";
                     href="#"
                     as="a"
                     variant="ghost"
-                    class="w-full justify-start">About</Button>
+                    class="w-full justify-start">About</Button
+                  >
                 </li>
                 <li>
                   <Button
                     href="#"
                     as="a"
                     variant="ghost"
-                    class="w-full justify-start">Team</Button>
+                    class="w-full justify-start">Team</Button
+                  >
                 </li>
                 <li>
                   <Button
                     href="#"
                     as="a"
                     variant="ghost"
-                    class="w-full justify-start">Blog</Button>
+                    class="w-full justify-start">Blog</Button
+                  >
                 </li>
                 <li>
                   <Button
                     href="#"
                     as="a"
                     variant="ghost"
-                    class="w-full justify-start">Careers</Button>
+                    class="w-full justify-start">Careers</Button
+                  >
                 </li>
               </ul>
             </MenuDropdown>
