--- a/apps/web/src/pages/template-2.astro
+++ b/apps/web/src/pages/template-2.astro
@@ -1,21 +1,29 @@
 ---
-import Button from '@bejamas/ui/components/Button.astro';
-import NavigationMenu from '@bejamas/ui/components/NavigationMenu.astro';
-import MenuDropdown from '@bejamas/ui/components/Dropdown.astro';
-import StickySurface from '@bejamas/ui/components/StickySurface.astro';
-import Breadcrumbs from '@bejamas/ui/components/Breadcrumbs.astro';
-import { SlashIcon } from '@lucide/astro';
-
-import '../styles/global.css';
+import Button from "@bejamas/ui/components/Button.astro";
+import NavigationMenu from "@bejamas/ui/components/NavigationMenu.astro";
+import MenuDropdown from "@bejamas/ui/components/Dropdown.astro";
+import StickySurface from "@bejamas/ui/components/StickySurface.astro";
+import Breadcrumbs from "@bejamas/ui/components/Breadcrumbs.astro";
+import { SlashIcon } from "@lucide/astro";
 ---
 
 <div class="bg-muted">
-  <StickySurface threshold="1rem" observeStuck class="top-5 [&.is-stuck]:shadow-sm [&.is-stuck]:max-w-2xl max-w-5xl rounded-2xl h-16 mx-auto" effects={["elevate"]}
-  style="--stuck-shadow: var(--shadow-sm)"
+  <StickySurface
+    threshold="1rem"
+    observeStuck
+    class="top-5 [&.is-stuck]:shadow-sm [&.is-stuck]:max-w-2xl max-w-5xl rounded-2xl h-16 mx-auto"
+    effects={["elevate"]}
+    style="--stuck-shadow: var(--shadow-sm)"
   >
-    <NavigationMenu class="rounded-2xl bg-transparent group-[.is-stuck]/surface:bg-white/40 h-16 backdrop-blur-sm mx-auto transition-all duration-200 ease-out">
+    <NavigationMenu
+      class="rounded-2xl bg-transparent group-[.is-stuck]/surface:bg-white/40 h-16 backdrop-blur-sm mx-auto transition-all duration-200 ease-out"
+    >
       <div slot="logo" class="flex items-center h-full">
-        <img src="https://cdn.prod.website-files.com/624380709031623bfe4aee60/668b2b16e18e604c50a1362c_Logo-wide.svg" alt="Acme, Inc." class="h-7" />
+        <img
+          src="https://cdn.prod.website-files.com/624380709031623bfe4aee60/668b2b16e18e604c50a1362c_Logo-wide.svg"
+          alt="Acme, Inc."
+          class="h-7"
+        />
       </div>
       <ul slot="links" class="flex items-center space-x-2">
         <li><Button as="a" href="/" variant="ghost">Home</Button></li>
@@ -23,20 +31,56 @@ import '../styles/global.css';
           <MenuDropdown>
             <span slot="trigger">Company</span>
             <ul slot="content">
-              <li><Button href="#" as="a" variant="ghost" class="w-full justify-start">About</Button></li>
-              <li><Button href="#" as="a" variant="ghost" class="w-full justify-start">Team</Button></li>
-              <li><Button href="#" as="a" variant="ghost" class="w-full justify-start">Blog</Button></li>
-              <li><Button href="#" as="a" variant="ghost" class="w-full justify-start">Careers</Button></li>
+              <li>
+                <Button
+                  href="#"
+                  as="a"
+                  variant="ghost"
+                  class="w-full justify-start">About</Button>
+              </li>
+              <li>
+                <Button
+                  href="#"
+                  as="a"
+                  variant="ghost"
+                  class="w-full justify-start">Team</Button>
+              </li>
+              <li>
+                <Button
+                  href="#"
+                  as="a"
+                  variant="ghost"
+                  class="w-full justify-start">Blog</Button>
+              </li>
+              <li>
+                <Button
+                  href="#"
+                  as="a"
+                  variant="ghost"
+                  class="w-full justify-start">Careers</Button>
+              </li>
             </ul>
           </MenuDropdown>
-      </li>
+        </li>
         <li><Button as="a" href="/contact" variant="ghost">Contact</Button></li>
       </ul>
       <div slot="actions" class="flex items-center gap-2">
-        <Button variant="outline" class="group-[.is-stuck]/surface:opacity-0 group-[.is-stuck]/surface:blur-sm transition-all duration-300 ease-out">Log in</Button>
-        <Button class="w-20 group-[.is-stuck]/surface:w-25 duration-500 ease-out">
-          <span class="group-[.is-stuck]/surface:blur-sm group-[.is-stuck]/surface:opacity-0 absolute group-[.is-stuck]/surface:hidden transition-discrete duration-500 ease-out">Contact</span>
-          <span class="group-[.is-stuck]/surface:blur-none group-[.is-stuck]/surface:opacity-100 group-[.is-stuck]/surface:delay-150 group-[.is-stuck]/surface:block opacity-0 transition-all hidden blur-sm transition-discrete duration-500 ease-out">Get a demo</span>
+        <Button
+          variant="outline"
+          class="group-[.is-stuck]/surface:opacity-0 group-[.is-stuck]/surface:blur-sm transition-all duration-300 ease-out"
+          >Log in</Button
+        >
+        <Button
+          class="w-20 group-[.is-stuck]/surface:w-25 duration-500 ease-out"
+        >
+          <span
+            class="group-[.is-stuck]/surface:blur-sm group-[.is-stuck]/surface:opacity-0 absolute group-[.is-stuck]/surface:hidden transition-discrete duration-500 ease-out"
+            >Contact</span
+          >
+          <span
+            class="group-[.is-stuck]/surface:blur-none group-[.is-stuck]/surface:opacity-100 group-[.is-stuck]/surface:delay-150 group-[.is-stuck]/surface:block opacity-0 transition-all hidden blur-sm transition-discrete duration-500 ease-out"
+            >Get a demo</span
+          >
         </Button>
       </div>
     </NavigationMenu>
@@ -53,16 +97,34 @@ import '../styles/global.css';
       <li><Button href="/docs" as="a" variant="link">Docs</Button></li>
       <li><SlashIcon class="size-4" /></li>
       <li>
-    <MenuDropdown trigger={{ variant: 'link' }}>
-      <span slot="trigger">Menu</span>
-      <ul slot="content">
-        <li><Button href="#" as="a" variant="ghost" class="w-full justify-start">Item 1</Button></li>
-        <li><Button href="#" as="a" variant="ghost" class="w-full justify-start">Item 2</Button></li>
-        <li><Button href="#" as="a" variant="ghost" class="w-full justify-start">Item 3</Button></li>
-      </ul>
-    </MenuDropdown>
-    </li>
-    <li><SlashIcon class="size-4" /></li>
+        <MenuDropdown trigger={{ variant: "link" }}>
+          <span slot="trigger">Menu</span>
+          <ul slot="content">
+            <li>
+              <Button
+                href="#"
+                as="a"
+                variant="ghost"
+                class="w-full justify-start">Item 1</Button>
+            </li>
+            <li>
+              <Button
+                href="#"
+                as="a"
+                variant="ghost"
+                class="w-full justify-start">Item 2</Button>
+            </li>
+            <li>
+              <Button
+                href="#"
+                as="a"
+                variant="ghost"
+                class="w-full justify-start">Item 3</Button>
+            </li>
+          </ul>
+        </MenuDropdown>
+      </li>
+      <li><SlashIcon class="size-4" /></li>
       <li><Button as="span" variant="link">Current Page</Button></li>
     </Breadcrumbs>
   </section>
