--- a/templates/monorepo-astro/apps/web/src/layouts/Layout.astro
+++ b/templates/monorepo-astro/apps/web/src/layouts/Layout.astro
@@ -1,13 +1,12 @@
 ---
-// import '../styles/global.css'
-import '@repo/ui/styles/globals.css';
+import "@repo/ui/styles/globals.css";
 ---
 
 <html>
-	<head>
-		<title>My Astro Project</title>
-	</head>
-	<body>
-		<slot />
-	</body>
+  <head>
+    <title>My Astro Project</title>
+  </head>
+  <body>
+    <slot />
+  </body>
 </html>
