--- a/apps/web/src/pages/blocks/[slug].astro
+++ b/apps/web/src/pages/blocks/[slug].astro
@@ -1,8 +1,9 @@
 ---
+import StarlightPage from "@astrojs/starlight/components/StarlightPage.astro";
+
 import { getCollection, getEntry, render } from "astro:content";
 import BlockPreview from "@/components/BlockPreview.astro";
 import BlocksNav from "@/components/BlocksNav.astro";
-import StarlightPage from "@astrojs/starlight/components/StarlightPage.astro";
 
 const block = await getEntry("blocks", Astro.params.slug);
 
@@ -52,6 +53,6 @@ export async function getStaticPaths() {
   }
 
   .sl-container {
-    @apply max-w-[1500px];
+    @apply max-w-[1500px] mx-auto;
   }
 </style>
