--- a/apps/web/src/components/BlocksLayout.astro
+++ b/apps/web/src/components/BlocksLayout.astro
@@ -1,9 +1,5 @@
 ---
 import BlocksNav from "@/components/BlocksNav.astro";
-
-// import "@/styles/global.css";
-// import "@bejamas/ui/styles/globals.css";
-
 import StarlightPage from "@astrojs/starlight/components/StarlightPage.astro";
 ---
 
@@ -21,7 +17,7 @@ import StarlightPage from "@astrojs/starlight/components/StarlightPage.astro";
 </StarlightPage>
 
 <style is:global>
-  @reference "tailwindcss";
+  /* @reference "tailwindcss";
 
   .content-panel {
     @apply text-center border-0 pt-30 pb-0;
@@ -33,9 +29,10 @@ import StarlightPage from "@astrojs/starlight/components/StarlightPage.astro";
 
   .content-panel h1 {
     @apply text-5xl font-medium text-left max-w-2xl text-balance mx-0;
-  }
+  } */
 
   .sl-container {
-    @apply max-w-[1500px];
+    margin-inline: auto;
+    max-width: 1500px;
   }
 </style>
