feat(docs): improve blocks styling

--- a/apps/web/src/components/BlockExampleLayout.astro
+++ b/apps/web/src/components/BlockExampleLayout.astro
@@ -41,7 +41,7 @@ import "@bejamas/ui/styles/globals.css";
       );
     </script>
   </head>
-  <body class="antialiased py-20 bg-background">
+  <body class="antialiased bg-background">
     <link rel="stylesheet" href="/r/themes/current-theme.css" />
 
     <slot />
