--- a/apps/web/src/pages/blocks/features/1.astro
+++ b/apps/web/src/pages/blocks/features/1.astro
@@ -9,7 +9,9 @@ import { ArrowRight } from "@lucide/astro";
 ---
 
 <BlockExampleLayout>
-  <div class="max-w-5xl mx-auto [container-type:inline-size] text-foreground">
+  <div
+    class="max-w-5xl py-20 mx-auto [container-type:inline-size] text-foreground"
+  >
     <h2 class="font-medium mb-5 leading-none text-[clamp(2rem,12cqw,6rem)]">
       you can just eat eggs
     </h2>
