--- a/apps/web/src/components/BlocksLayout.astro
+++ b/apps/web/src/components/BlocksLayout.astro
@@ -17,10 +17,10 @@ import StarlightPage from "@astrojs/starlight/components/StarlightPage.astro";
 </StarlightPage>
 
 <style is:global>
-  /* @reference "tailwindcss";
+  @reference "tailwindcss";
 
   .content-panel {
-    @apply text-center border-0 pt-30 pb-0;
+    @apply text-center border-0 pt-30 pb-0 first:pt-10;
   }
 
   .content-panel + .content-panel {
@@ -29,7 +29,7 @@ import StarlightPage from "@astrojs/starlight/components/StarlightPage.astro";
 
   .content-panel h1 {
     @apply text-5xl font-medium text-left max-w-2xl text-balance mx-0;
-  } */
+  }
 
   .sl-container {
     margin-inline: auto;
