--- a/apps/web/src/pages/blocks/index.astro
+++ b/apps/web/src/pages/blocks/index.astro
@@ -33,7 +33,7 @@ const blocks = await getCollection("blocks");
   @reference "tailwindcss";
 
   .content-panel {
-    @apply text-center border-0 pt-30 pb-0;
+    @apply text-center border-0 pt-30 pb-0 first:pt-10;
   }
 
   .content-panel + .content-panel {
