--- a/apps/web/src/components/ThemeSwitcher.astro
+++ b/apps/web/src/components/ThemeSwitcher.astro
@@ -11,7 +11,7 @@ import { Sun, Moon, Laptop } from "@lucide/astro";
     <Moon class="size-4 hidden dark:block" />
   </div>
   <Select
-    id="theme-switcher"
+    id="theme-select"
     class="pl-9 w-32"
     trigger={{ variant: "secondary" }}
     showCheckmark={false}
