--- a/packages/starlight-theme-bejamas/src/styles/theme.css
+++ b/packages/starlight-theme-bejamas/src/styles/theme.css
@@ -27,6 +27,7 @@
 
     --sl-text-h1: 2.25rem;
     --sl-text-h2: var(--text-xl);
+    --sl-text-h3: var(--text-lg);
 
     --sl-color-gray-2: var(--input);
 
@@ -130,6 +131,7 @@
     box-shadow:
       var(--tw-inset-shadow), var(--tw-inset-ring-shadow),
       var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+    border-radius: calc(var(--radius) - 2px);
   }
 
   .expressive-code .frame {
@@ -259,5 +261,15 @@
 
   .expressive-code .frame pre {
     background-color: color-mix(in oklab, var(--muted) 50%, transparent);
+  }
+
+  .sl-markdown-content ul {
+    list-style: disc;
+    padding-left: 1rem;
+  }
+
+  .sl-markdown-content ol {
+    list-style: decimal;
+    padding-left: 1rem;
   }
 }
