--- a/packages/starlight-theme-bejamas/src/styles/theme.css
+++ b/packages/starlight-theme-bejamas/src/styles/theme.css
@@ -263,13 +263,23 @@
     background-color: color-mix(in oklab, var(--muted) 50%, transparent);
   }
 
-  .sl-markdown-content ul {
+  .sl-markdown-content ul:not(:where(.not-content *)) {
     list-style: disc;
     padding-left: 1rem;
   }
 
-  .sl-markdown-content ol {
+  .sl-markdown-content ol:not(:where(.not-content *)) {
     list-style: decimal;
     padding-left: 1rem;
+  }
+
+  .tablist-wrapper {
+    overflow-x: inherit;
+  }
+
+  .tablist-wrapper a[role="tab"] {
+    border-bottom: 0;
+    padding: 0;
+    display: inline-block;
   }
 }
